# LDSO

./: CMakeLists.txt  CMakeSettings.json  README.md  run_dso_tum_mono.bat
cmake/: FindSophus.cmake  options.cmake  suitesparse.cmake
examples/: CMakeLists.txt  DatasetReader.h  run_dso_euroc.cc  run_dso_kitti.cc  run_dso_tum_mono.cc
include/: Camera.h  Feature.h  Frame.h  Map.h  NumTypes.h  Point.h  timeutil.h
include/frontend/: CoarseInitializer.h  CoarseTracker.h  DSOViewer.h  FeatureDetector.h  FeatureMatcher.h  FullSystem.h  LoopClosing.h  MinimalImage.h  PixelSelector2.h
include/internal/: CalibHessian.h  FrameFramePrecalc.h  FrameHessian.h  GlobalFuncs.h  ImmaturePoint.h  IndexThreadReduce.h  PR.h  PointHessian.h  ResidualProjections.h  Residuals.h
include/internal/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.h
src/: CMakeLists.txt  Camera.cc  Feature.cc  Frame.cc  Map.cc  Point.cc  Setting.cc
src/frontend/: CoarseInitializer.cc  CoarseTracker.cc  DSOViewer.cc  FeatureDetector.cc  FeatureMatcher.cc  FullSystem.cc  LoopClosing.cc  PixelSelector2.cc
src/internal/: FrameFramePrecalc.cc  FrameHessian.cc  ImmaturePoint.cc  PR.cc  PointHessian.cc  Residuals.cc
src/internal/OptimizationBackend/: AccumulatedSCHessian.cc  AccumulatedTopHessian.cc  EnergyFunctional.cc
